--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Mobile Game</p><br />
-                            <p class="work-description"> 	"We had trouble with the timer and gameplay logic in our app. We reached out to Appably for assistance. They professionally diagnosed the problem and stabalized our code.  After that we knew we would need them for the rest of the project. Needless to say, our game turned out amazing!  Couldn't have done it without them."</p>- TREMAYNE TOORIE(Sasha Says)
+                            <p class="work-description"> 	"We had trouble with the timer and gameplay logic in our app. We reached out to Appably for assistance. They professionally diagnosed the problem and stabalized our code.  After that we knew we would need them for the rest of the project. Needless to say, our game turned out amazing!  Couldn't have done it without them." - TREMAYNE TOORIE(Sasha Says)</p>
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/sasha-says/id1266366624?ls=1&mt=8" target="_blank">iOS APP</a></div>
                             <div class="work-details">
                             </div>
@@ -161,7 +161,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Restaurant and Activities Discount App</p><br />
-                            <p class="work-description"> 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis." - BRANDON STOKES(Up2Date)</p>
+                            <p class="work-description"> 	"It all started with a dream about an app to help couples and/or groups of friends find things to do in their area.  After talking to multiple developers, I decided to go with Appably.  Not only did they deliver on creating my app, they also gave input on features and suggestions on how to best present it to the consumer without trying to force me away from my vision.  The other developers I talked to wanted to steer me into a generic template design.  But Appably made me feel like it was my app by taking the time to make sure I had the look and feel that I desired. - BRANDON STOKES(Up2Date)</p>
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/up2date-mobile-app/id1292969487?ls=1&mt=8" target="_blank">iOS APP</a></div>
                             <div class="work-button"><a href="https://play.google.com/store/apps/details?id=com.coolreece.up2date&hl=en_US">ANDROID APP</a></div>
                             <div class="work-details">
@@ -193,7 +193,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Non-Profit Events App</p><br />
-                            <p class="work-description"> 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis." - RENEE JOSEPH(Pledge)</p>
+                            <p class="work-description"> 	"I moved to a new city and I found it difficult to quickly find ways to contribute to my community on a short notice.  I thought 'there should be an app for that'! Once I decided to move forward with my idea, a friend put me in touch with Appably and the rest is history.  They handled the app from start to finish while communicating the whole process to me.  The fact that they could turn my thoughts into a tool to help communities across the country amazes me.  Best part of it, is that I didn't have to lift a finger." - SHALLYNN JACKSON(Pledge)</p>
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/pledge-app/id1257767470?ls=1&mt=8">iOS APP</a></div>
                             <div class="work-details">
                             </div>
@@ -224,7 +224,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">An App to find Local STEM/STEAM Programs</p><br />
-                            <p class="work-description">	"This is an in-house mobile app project to help parents find science, technology, engineering, arts, and math programs for their children in preparation for a tech-fueled future.  We feel it's important to use our skills to create a resource for our community." - THE APPABLY TEAM</p>
+                            <p class="work-description">	"This is an in-house mobile app project to help parents find science, technology, engineering, arts, and math programs for their children in preparation for a tech-fueled future.  We feel it's important to use our skills to create a resource for our community." - THE APPABLY TEAM 📱</p>
                             <div class="work-details">
                             </div>
                         </div>
@@ -276,7 +276,7 @@
    
     <!-- Logo footer -->
     <div class="logo-footer">
-        <a href="https://appably.github.io/"><img src="assets/appablyLogo.png" alt="appably" class="logo-text"></a>
+        <a href="https://appably.github.io/"><img src="assets/appablyLogo.png" alt="appably" class="img-fluid"></a>
     </div>
     <!-- END Logo footer -->
     
