--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- Logo -->
         <div class="col-sm-6">
             <p class="site-title">
-                    <a href="https://appably.github.io/"><img src="/assets/appablyLogo.png" alt="appably"></a>
+                    <a href="https://appably.github.io/"><img src="/assets/appablyLogo.png" alt="appably" class="logo-text"></a>
             </p>
         </div>
         <!-- END Logo -->
@@ -161,7 +161,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Restaurant and Activities Discount App</p><br />
-                            <p class="work-description"> 	"It all started with a dream about an app to help couples and/or groups of friends find things to do in their area.  After talking to multiple developers, I decided to go with Appably.  Not only did they deliver on creating my app, they also gave input on features and suggestions on how to best present it to the consumer without trying to force me away from my vision.  The other developers I talked to wanted to steer me into a generic template design.  But Appably made me feel like it was my app by taking the time to make sure I had the look and feel that I desired. - BRANDON STOKES(Up2Date)</p>
+                            <p class="work-description"> 	"It all started with a dream about an app to help couples or groups of friends find things to do in their area. After talking to multiple developers, I decided to go with Appably.  The other developers I talked to wanted to steer me into a generic template design. However, Appably made me feel like it was my app by taking the time to make sure I had the look and feel that I desired. They delivered on creating my app without trying to force me away from my vision. - BRANDON STOKES(Up2Date)</p>
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/up2date-mobile-app/id1292969487?ls=1&mt=8" target="_blank">iOS APP</a></div>
                             <div class="work-button"><a href="https://play.google.com/store/apps/details?id=com.coolreece.up2date&hl=en_US">ANDROID APP</a></div>
                             <div class="work-details">
@@ -193,7 +193,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Non-Profit Events App</p><br />
-                            <p class="work-description"> 	"I moved to a new city and I found it difficult to quickly find ways to contribute to my community on a short notice.  I thought 'there should be an app for that'! Once I decided to move forward with my idea, a friend put me in touch with Appably and the rest is history.  They handled the app from start to finish while communicating the whole process to me.  The fact that they could turn my thoughts into a tool to help communities across the country amazes me.  Best part of it, is that I didn't have to lift a finger." - SHALLYNN JACKSON(Pledge)</p>
+                            <p class="work-description"> 	"I moved to a new city and found it difficult to quickly find ways to contribute to my community on a short notice. I thought 'there should be an app for that'! Once I decided to move forward with my idea, a friend put me in touch with Appably.  They handled the app from start to finish while communicating the whole process to me.  The fact that they could turn my thoughts into a tool to help communities across the country amazes me.  Best part is that I didn't have to lift a finger." - SHALLYNN JACKSON(Pledge)</p>
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/pledge-app/id1257767470?ls=1&mt=8">iOS APP</a></div>
                             <div class="work-details">
                             </div>
@@ -275,9 +275,7 @@
   <footer id="footer">
    
     <!-- Logo footer -->
-    <div class="logo-footer">
-        <a href="https://appably.github.io/"><img src="assets/appablyLogo.png" alt="appably" class="img-fluid"></a>
-    </div>
+    <a href="https://appably.github.io/"><img src="assets/appablyLogo.png" alt="appably"></a>
     <!-- END Logo footer -->
     
     <!-- Contact mail -->
