--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Non-Profit Events App</p><br />
-                            <p class="work-description"> 	"I moved to a new city and found it difficult to quickly find ways to contribute to my community on a short notice. I thought 'there should be an app for that'! Once I decided to move forward, a friend put me in touch with Appably.  They handled the app from start to finish while communicating the whole process to me. The fact that they could turn my thoughts into a tool to help communities across the country amazes me. Best part: I didn't have to lift a finger." - SHALLYNN JACKSON(Pledge)</p>
+                            <p class="work-description"> 	"I moved to a new city and found it difficult to find ways to volunteer in the community on a short notice. I thought, 'there should be an app for that!' Once I decided to move forward, I got in touch with Appably. They handled the app from start to finish while communicating the whole process to me. The fact that they could turn my thought into a tool to help communities simply amazes me. Best part: I didn't have to lift a finger." - SHALLYNN JACKSON(Pledge)</p>
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/pledge-app/id1257767470?ls=1&mt=8">iOS APP</a></div>
                             <div class="work-details">
                             </div>
@@ -224,7 +224,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">An App to find Local STEM/STEAM Programs</p><br />
-                            <p class="work-description">	"This is an in-house mobile app project to help parents find science, technology, engineering, arts, and math programs for their children in preparation for a tech-fueled future.  We feel it's important to use our skills to create a resource for our community." - THE APPABLY TEAM 📱</p>
+                            <p class="work-description">	"This is an in-house mobile app project to help parents find Science, Technology, Engineering, Arts, and Math programs for their children in preparation for a tech-fueled future.  We feel it's important to use our skills to create a resource for our community." - THE APPABLY TEAM 📱</p>
                             <div class="work-details">
                             </div>
                         </div>
