--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Mobile Game</p><br />
-                            <p class="work-description"> 	"We had trouble with the timer and gameplay logic in our app. We reached out to Appably for assistance. They professionally diagnosed the problem and stabalized our code.  After that we knew we would need them for the rest of the project. Needless to say, our game turned out amazing!  Couldn't have done it without them." - TREMAYNE TOORIE(Sasha Says)</p>
+                            <p class="work-description"> 	"We had trouble with the timer and gameplay logic in our game. We reached out to Appably for assistance. They professionally diagnosed the problem and stabalized our code.  After that we knew we would need them for the rest of the project. Needless to say, our game turned out amazing!  Couldn't have done it without them." - TREMAYNE TOORIE(Sasha Says)</p>
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/sasha-says/id1266366624?ls=1&mt=8" target="_blank">iOS APP</a></div>
                             <div class="work-details">
                             </div>
