--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
             <div id="description-text-container">
                 <h1 class="title">turning ideas into apps</h1>
                 <p class="description"><a href="#what">DESIGN → DEVELOPMENT → MARKETING → BEYOND</a><br /><br />
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis.</a><br /><br /><br />
+                <p class="description">What defines us as a mobile app development company?  The belief that everyone has the right to turn their dreams into a reality. It’s ok if you don’t know much about technology. We focus on making the process simple for our clients while being transparent throughout.  It’s about maintaining our core values (integrity, client satisfaction, innovation, community involvement, fun) while going to the limit for your project.</a><br />
+				<p class="description">Even the most successful apps started with taking a chance on a simple concept. Drop us a line so we can build something awesome together!</a><br />
                     <a href="#contact">CONTACT US</a></p>
                 <div class="word-overlay">
                     <span class="two-words-overlay">turning ideas into apps</span>
