--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
             <div id="description-text-container">
                 <h1 class="title">turning ideas into apps</h1>
                 <p class="description"><a href="#what">DESIGN → DEVELOPMENT → MARKETING → BEYOND</a><br /><br />
-                <p style="color:white" class="description">What defines us as a mobile app development company?</a><br />                          
-				<p class="description">The belief that you have the right to turn your dreams into a reality. It’s ok if you don’t know much about technology. We focus on making the process simple for our clients while being transparent throughout. It’s about maintaining our core values (Integrity, Client Satisfaction, Innovation, Community, Fun) while going to the limit for your project.</a><br /><br /><br />
+                <p style="color:yellow" class="description">What defines us as a mobile app development company?</a><br />                          
+				<p class="description">The belief that you have the right to turn your dreams into a reality. It’s ok if you don’t know much about</a>
+				<p class="description">technology. We focus on making the process simple for our clients while being transparent throughout. It’s about maintaining our core values (Integrity, Client Satisfaction, Innovation, Community, Fun) while going to the limit for your project.</a><br /><br /><br />
 				<p class="description">Even the most successful apps started with taking a chance on a simple concept.</a><br />
 				<p class="description"></a>Drop us a line so we can build something awesome together!<br /><br />	
                     <a href="#contact">CONTACT US</a></p>
