--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             <div id="description-text-container">
                 <h1 class="title">turning ideas into apps</h1>
                 <p class="description"><a href="#what"><br />DESIGN → DEVELOPMENT → MARKETING → BEYOND</a><br /><br /><br />
-                <p style="font-size:16px; color:white; font-weight:bold" class="description"><br />What defines us as a mobile app development company?</a><br />                          
-				<p style="color:white" class="description">The belief that you have the right to turn your dreams into a reality. It’s ok if you don’t know much about <br />technology. We focus on making the process simple for our clients while being transparent throughout. <br />It’s about maintaining our core values <span style="color:yellow">(Integrity, Client Satisfaction, Innovation, Community, Fun)</span> while <br />going to the limit for you and your project.</a><br /><br />
+                <p style="color:white; font-weight:bold" class="description"><br />What defines us as a mobile app development company?</a><br />                          
+				<p style="font-size:17px; color:white" class="description">The belief that you have the right to turn your dreams into a reality. It’s ok if you don’t know much about <br />technology. We focus on making the process simple for our clients while being transparent throughout. <br />It’s about maintaining our core values <span style="color:yellow; font-weight:bold">(Integrity, Client Satisfaction, Innovation, Community, Fun)</span> while <br />going to the limit for you and your project.</a><br /><br />
 				<p class="description">Even the most successful apps started with taking a chance on a simple concept.</a><br />
 				<p class="description"></a>Drop us a line so we can build something awesome together!<br /><br />	
                     <a href="#contact">CONTACT US</a></p>
