--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- Logo -->
         <div class="col-sm-6">
             <p class="site-title">
-                    <a href="https://appably.github.io/"><img src="/assets/appablyLogo.png" alt="appably" width="137" height="54"></a>
+                    <a href="http://appably.co"><img src="/assets/appablyLogo.png" alt="appably" width="137" height="54"></a>
             </p>
         </div>
         <!-- END Logo -->
@@ -100,7 +100,7 @@
                 <p class="description"><a href="#what"><br />DESIGN → DEVELOPMENT → MARKETING → BEYOND</a><br /><br /><br />
                 <p style="color:white; font-weight:bold" class="description"><br />What defines us as a mobile app development company?</a><br />                          
 				<p style="font-size:17px; color:white" class="description">The belief that you have the right to turn your dreams into a reality. It’s ok if you don’t know much regarding <br />technology. We focus on making the process simple for our clients and being transparent throughout. <br />It’s about maintaining our core values <span style="color:yellow; font-weight:bold">(Integrity, Client Satisfaction, Innovation, Community, Fun)</span> <br />while going to the limit for you and your project.</a><br /><br />
-				<p class="description">Even the most successful apps started with taking a chance on a simple concept. <br />Drop us a line so we can build something awesome together!</a><br />
+				<p class="description">Even the most successful apps started with taking a chance on a simple concept. <br />Drop us a line so we can build something awesome together!</a><br /><br />
 					
                     <a href="#contact">CONTACT US</a></p>
                 <div class="word-overlay">
