--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">    
     <meta name="viewport" content="width=device-width, user-scalable=0, initial-scale=1">
-    <title>Appably</title>
+    <title>Appably - App Development</title>
     <meta name="description" content="Appably" />
     <link rel="canonical" href="http://appably.co/" />
     <meta property="og:locale" content="en_EN" />
