--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta charset="UTF-8">    
     <meta name="viewport" content="width=device-width, user-scalable=0, initial-scale=1">
     <title>Appably - App Development</title>
-    <meta name="description" content="Appably" />
+    <meta name="description" content="Appably - App Development" />
     <link rel="canonical" href="http://appably.co/" />
     <meta property="og:locale" content="en_EN" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Appably" />
-    <meta property="og:description" content="Appably" />
+    <meta property="og:title" content="Appably - App Development" />
+    <meta property="og:description" content="Appably - App Development" />
     <meta property="og:url" content="http://appably.co/" />
-    <meta property="og:site_name" content="appably" />
+    <meta property="og:site_name" content="Appably - App Development" />
     <meta property="og:image" content="/assets/og-bluedot.jpg" />
     
         
@@ -99,8 +99,8 @@
                 <h1 class="title">turning ideas into apps</h1>
                 <p class="description"><a href="#what">DESIGN → DEVELOPMENT → MARKETING → BEYOND</a><br /><br /><br />
                 <p style="color:white; font-weight:bold" class="description"><br /><br />What defines us as a mobile app development company?</a><br />                          
-				<p style="font-size:17px; color:white" class="description">The belief that you have the right to turn your dreams into a reality. It’s ok if you don’t know much regarding <br />technology. We focus on making the process simple for our clients and being transparent throughout. <br />It’s about maintaining our core values <span style="color:yellow; font-weight:bold">(Integrity, Client Satisfaction, Innovation, Community, Fun)</span> <br />while going to the limit for you and your project.</a><br /><br />
-				<p class="description">Even the most successful apps started with taking a chance on a simple concept. <br />Drop us a line so we can build something awesome together!</a><br /><br />
+				<p style="font-size:17px; color:white" class="description">The belief that you have the right to turn your dreams into a reality. It’s ok if you don’t know much regarding <br />technology. We focus on making the process simple for our clients and being transparent throughout. <br />It’s about maintaining our core values <span style="color:yellow">(Integrity, Client Satisfaction, Innovation, Community, Fun)</span> <br />while going to the limit for you and your project.</a><br /><br />
+				<p style="font-size:17px" class="description">Even the most successful apps started with taking a chance on a simple concept. <br />Drop us a line so we can build something awesome together!</a><br /><br />
                     <a href="#contact">CONTACT US</a></p>
                 <div class="word-overlay">
                     <span class="two-words-overlay">turning ideas into apps</span>
