--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
             <div id="description-text-container">
                 <h1 class="title">turning ideas into apps</h1>
                 <p class="description"><a href="#what">DESIGN → DEVELOPMENT → MARKETING → BEYOND</a><br />
-                <p style="font-size:90%; color:white; font-weight:bold" class="description">What defines us as an app development company?</a><br />                          
-				<p style=" font-size:85%; color:white" class="description">The belief that you have the right to turn your dreams into a reality. It’s ok if you don’t know much regarding technology. We focus on making the process simple for our clients and being transparent throughout. It’s about maintaining our core values <span style="color:yellow">(Integrity, Client Satisfaction, Innovation, Community, Fun)</span> while going to the limit for you and your project.</a><br />
-				<p style=" font-size:80%" class="description">Even the most successful apps started with taking a chance on a simple concept. <br />Drop us a line so we can build something awesome together!</a><br /><br />
-                    <a href="#contact"><span style="font-size:100%">CONTACT US</span></a></p>
+                <p style="color:white; font-weight:bold" class="description">What defines us as an app development company?</a><br />                          
+				<p style="color:white" class="description">The belief that you have the right to turn your dreams into a reality. It’s ok if you don’t know much regarding technology. We focus on making the process simple for our clients and being transparent throughout. It’s about maintaining our core values <span style="color:yellow">(Integrity, Client Satisfaction, Innovation, Community, Fun)</span> while going to the limit for you and your project.</a><br />
+				<p class="description">Even the most successful apps started with taking a chance on a simple concept. <br />Drop us a line so we can build something awesome together!</a><br /><br />
+                    <a href="#contact">CONTACT US</a></p>
                 <div class="word-overlay">
                     <span class="two-words-overlay">turning ideas into apps</span>
                 </div>
