--- a/index.html
+++ b/index.html
@@ -97,10 +97,8 @@
         <section id="home">
             <div id="description-text-container">
                 <h1 class="title">turning ideas into apps</h1>
-                <p class="description"><a href="#what">DESIGN → DEVELOPMENT → MARKETING → BEYOND</a><br />
-                <p style="color:white; font-weight:bold" class="description">What defines us as an app development company?</a><br />                          
-				<p style="color:white" class="description">A simple process for our clients and hard work structured around our core values: <br /><span style="color:yellow">Integrity,Client Satisfaction,Innovation,Community,Fun</span></a><br />
-				<p class="description">Even the most successful apps started with taking a chance on a simple concept. <br />Drop us a line so we can build something awesome together!</a><br /><br />
+                <p class="description"><a href="#what">DESIGN → DEVELOPMENT → MARKETING → BEYOND</a><br />                     <p class="description">We provide a simple process for our clients and hard work structured around our core values: <br /><span style="color:yellow">Integrity,Client Satisfaction,Innovation,Community,Fun</span></a><br />
+				<p style="font-size:90%" class="description">Even the most successful apps started with taking a chance on a simple concept. <br />Drop us a line so we can build something awesome together!</a><br /><br />
                     <a href="#contact">CONTACT US</a></p>
                 <div class="word-overlay">
                     <span class="two-words-overlay">turning ideas into apps</span>
