--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <section id="home">
             <div id="description-text-container">
                 <h1 class="title">turning ideas into apps</h1>
-                <p class="description"><a href="#what">DESIGN → DEVELOPMENT → MARKETING → BEYOND</a><br />                     <p class="description">We provide a simple process for our clients, with hard work built around our core values: <br /><span style="color:yellow">Integrity, Client Satisfaction, Innovation, Community, Fun</span></a>
-				<p style="font-size:95%" class="description"><br />Drop us a line so we can create something awesome together!</a><br />
+                <p class="description"><a href="#what">DESIGN → DEVELOPMENT → MARKETING → BEYOND</a><br />                     <p class="description">We provide a simple process for our clients with hard work built around our core values: <br /><span style="color:yellow">Integrity, Client Satisfaction, Innovation, Community, Fun</span></a>
+				<p style="font-size:95%" class="description">Drop us a line so we can create something awesome together!</a><br />
                 <p style="font-size:100%" class="description"><a href="#contact">CONTACT US</a></p>
                 <div class="word-overlay">
                     <span class="two-words-overlay">turning ideas into apps</span>
