--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <nav id="mobile-navigation">
                 <ul>
-                    <li><a href="#work">Projects.</a></li>
+                    <li><a href="#work">Clients.</a></li>
                     <li><a href="#what">Services.</a></li>
                     <li><a href="#contact">Contact.</a></li>
                 </ul>
