--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <section id="home">
             <div id="description-text-container">
                 <h1 class="title">turning ideas into apps</h1>
-                <p class="description"><a href="#what">DESIGN → DEVELOPMENT → MARKETING → BEYOND</a><br />                     <p class="description">We provide a simple process for our clients with hard work built around our core values: <br /><span style="color:yellow">Integrity, Client Satisfaction, Innovation, Community, Fun</span></a>
+                <p class="description"><a href="#what">DESIGN → DEVELOPMENT → MARKETING → BEYOND</a><br />                     <p class="description">We provide a simple process for our clients through hard work built around our core values: <br /><span style="color:yellow">Integrity, Client Satisfaction, Innovation, Community, Fun</span></a>
 				<p style="font-size:95%" class="description">Drop us a line so we can create something awesome together!</a><br />
                 <p style="font-size:100%" class="description"><a href="#contact">CONTACT US</a></p>
                 <div class="word-overlay">
@@ -254,7 +254,7 @@
                             <img class="illus-service" src="/assets/icon_webd-dev.svg" alt="Icone développement et design">
                         </div>
                         <h3 class="title-service">Development</h3>
-                        <p class="text-service">Our team uses the latest tools to create stable cutting-edge apps that are swift and scalable for when your app takes off. </p>
+                        <p class="text-service">Our team uses the latest tools to create stable cutting-edge apps that are swift and scalable for when your app takes off! </p>
                     </div>                
                     <div class="service col-lg-2 col-sm-4">
                         <div class="container-illus">
