--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         
         <!-- Project 3 -->
         <section class="work work-three">
-            <h2 class="work-title">Client - Pledge</h2>
+            <h2 class="work-title">Client - KiddiEventz</h2>
             <div class="work-block-container">
                 <div class="word-container">
                     <div class="word-overlay">
@@ -193,8 +193,9 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Non-Profit Events App</p><br />
-                            <p class="work-description"> 	"I moved to a new city and it was difficult to find ways to volunteer in the community on short notice. I thought, 'there should be an app for that!' Once I decided to move forward, I got in touch with Appably. They handled the app from start to finish while communicating the whole process to me. The fact that they could turn my thought into a tool to help communities simply amazes me. Best part: I didn't have to lift a finger." - SHALLYNN JACKSON(Pledge)</p>
-                            <div class="work-button"><a href="https://itunes.apple.com/us/app/pledge-app/id1257767470?ls=1&mt=8">iOS APP</a></div>
+                            <p class="work-description"> 	"If you’re looking for a developer to go above and beyond, Adrian is the guy. He’s great at translating an idea into a product. I’m very happy with the service I’ve received and I’d highly recommend.
+" - MARISSA PACE(KiddiEventz)</p>
+                            <div class="work-button"><a href="https://itunes.apple.com/us/app/kiddieventz/id1428822653?ls=1&mt=8">iOS APP</a></div>
                             <div class="work-details">
                             </div>
                         </div>
