--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             <img class="mockup-gif mobile-gif" src="/images/mockup-gif-3.gif" alt="Gif example on mobile mockup" width="136" height="242">
                         </div>
                         <div class="work-description-container col-lg-6">
-                            <p class="work-category">Non-Profit Events App</p><br />
+                            <p class="work-category">Kid-Friendly Events App</p><br />
                             <p class="work-description"> 	"If you’re looking for a developer to go above and beyond, Adrian is the guy. He’s great at translating an idea into a product. I’m very happy with the service I’ve received and I’d highly recommend.
 " - MARISSA PACE(KiddiEventz)</p>
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/kiddieventz/id1428822653?ls=1&mt=8">iOS APP</a></div>
