--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     
     <!-- Social links -->
     <ul class="social">
-        <li><a href="https://www.facebook.com/appably">Facebook</a></li>
+        <li><a href="https://www.facebook.com/appablymobile">Facebook</a></li>
         <li><a href="https://twitter.com/appablymobile">Twitter</a></li>
         <li><a href="https://www.instagram.com/appablymobile/">Instagram</a></li>
     </ul>
